[package]
name = "game1"
version = "0.1.0"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.6", features = [] }
#bevy_aseprite = "0.6"
bevy = { version = "0.6", features = ["dynamic"] }
bevy_aseprite = { path = "ext/bevy_aseprite-0.6.0" }
bevy_asset_loader = "0.9"
bevy_ecs_tilemap = "0.5"
bevy_prototype_debug_lines = "0.6"
bevy-inspector-egui = { version = "0.9", optional = true }
bevy_egui = "0.12"
big-brain = "0.10"
rand = "0.8"
rand_distr = "0.4"
rtriangulate = "0.3"
serde = "1"
serde_yaml = "0.8"
petgraph = "0.6"
pathfinding = "3"
