[package]
name = "game1"
version = "0.1.0"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.6", features = [] }
#bevy_aseprite = "0.6"
# bevy = { version = "0.8", features = ["dynamic"] }
bevy = { version = "0.8" }
bevy_aseprite = { path = "crates/bevy_aseprite-0.7.0" }
# bevy_aseprite = "0.7"
bevy_asset_loader = "0.12"
bevy_ecs_tilemap = "0.8"
bevy_prototype_debug_lines = "0.8"
bevy-inspector-egui = { version = "0.13", optional = true }
bevy_egui = "0.16"
big-brain = "0.14"
rand = "0.8"
rand_distr = "0.4"
rtriangulate = "0.3"
serde = "1"
serde_yaml = "0.9"
petgraph = "0.6"
pathfinding = "3"
anyhow = "1"
num-traits = "0.2"
bitvec = "1"
multimap = "0.8"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
